--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "ENX's contribution to EC's 2025 challenge"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "catboost>=1.2.8",
     "fastparquet>=2024.11.0",
     "ipykernel>=7.1.0",
     "lightgbm>=4.6.0",
