--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "lightgbm>=4.6.0",
     "matplotlib>=3.10.7",
     "mlflow>=3.5.1",
+    "openap>=2.4",
     "optuna>=4.5.0",
     "optuna-integration>=4.5.0",
     "pandas>=2.3.3",
