--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "catboost>=1.2.8",
     "duckdb>=1.4.1",
     "fastparquet>=2024.11.0",
+    "haversine>=2.9.0",
     "ipykernel>=7.1.0",
     "lightgbm>=4.6.0",
     "matplotlib>=3.10.7",
