--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ dependencies = [
     "catboost>=1.2.8",
     "duckdb>=1.4.1",
     "fastparquet>=2024.11.0",
+    "geopy>=2.4.1",
     "haversine>=2.9.0",
     "ipykernel>=7.1.0",
+    "joblib>=1.5.2",
     "lightgbm>=4.6.0",
     "matplotlib>=3.10.7",
     "mlflow>=3.5.1",
